--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
         </div>
     </section>
 
-
-
     <section> 
         <section class="categoria">
         <h2>Filmes e séries</h2>
@@ -55,6 +53,6 @@
         </div>
     </section>
 
-
-
     <body>
+
+        <html>
